# anyvar

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  PRD.md  PROJECT.md  README.md  SPECIFICATION.md  Taskfile.yml  implementation-thoughts.md
.github/workflows/: ci.yml
cmake/toolchains/: arm-cortex-m.cmake  emscripten.cmake
docs/: c-lib-integration.md  implementation-thoughts.md
include/: anyvar.h
src/: anyvar-containers.c  anyvar-internal.h  anyvar-runtime.c
tests/: test-buffers.c  test-containers.c  test-errors.c  test-main.c  test-scalars.c  test-suite.h
vbrief/: specification.vbrief.json
